--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </div> -->
 
 
-<!-- <header class="navigation dark">
+<header class="navigation dark">
 <div class="container">
 <div class="hamburger">
 <span></span>
@@ -91,7 +91,8 @@
 </div>
 <a alt="Rydoo" class="brand" href="https://www.rydoo.com/"></a>
 <nav class="nav-primary">
-<ul id="menu-main-menu" class="nav"><li class="preventdefault-on-mobile menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-1536"><a href="https://www.rydoo.com/expense/">Product</a>
+<ul id="menu-main-menu" class="nav">
+<!-- <li class="preventdefault-on-mobile menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-1536"><a href="https://www.rydoo.com/expense/">Product</a>
 <ul class="sub-menu">
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-24329"><a href="#">Our product highlights&#8230;</a>
 <ul class="sub-menu">
@@ -111,18 +112,24 @@
 </ul>
 </li>
 </ul>
-</li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24901"><a href="https://www.rydoo.com/pricing/">Pricing</a></li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-24384"><a href="#">Why Rydoo?</a>
+</li> -->
+
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24901"><a href="index.html">Home</a></li>
+
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24901"><a href="#">Pricing</a></li>
+
+<!-- <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-24384"><a href="#">Why Rydoo?</a>
 <ul class="sub-menu">
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-24385"><a href="#">Rydoo helps you to&#8230;</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-26505"><a href="https://www.rydoo.com/mobile-expense-app/">Handle expenses on the go</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9409"><a href="https://www.rydoo.com/expense/eliminate-expense-reports/">Eliminate Expense Reports</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8912"><a href="https://www.rydoo.com/expense/convert-to-a-paperless-office/">Convert to a Paperless Office</a></li>
 </ul>
-</li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="https://www.rydoo.com/customers/">Customers</a></li>
-<li class="preventdefault-on-mobile menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-21"><a href="https://www.rydoo.com/resources/">Resources</a>
+</li> -->
+
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="blog.html">Blog</a></li>
+
+<!-- <li class="preventdefault-on-mobile menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-21"><a href="https://www.rydoo.com/resources/">Resources</a>
 <ul class="sub-menu">
 <li class="show-for-mobile-only ico ico-overview menu-item menu-item-type-post_type menu-item-object-page menu-item-7066"><a href="https://www.rydoo.com/resources/">All resources</a></li>
 <li class="ico ico-blog menu-item menu-item-type-post_type menu-item-object-page menu-item-51"><a href="https://www.rydoo.com/resources/blog/"><img loading="lazy" width="44" height="44" class="menu-icon" src="./app/uploads/2020/09/menu-blog.svg" alt="Menu Blog Icon Pencil" title="Pencil Icon">Blog</a></li>
@@ -132,8 +139,9 @@
 <li class="ico ico-devcenter menu-item menu-item-type-custom menu-item-object-custom menu-item-241"><a target="_blank" rel="noopener" href="https://developers.rydoo.com/"><img loading="lazy" width="44" height="44" class="menu-icon" src="./app/uploads/2020/09/menu-devcenter.svg" alt="Dev Center Tools Icon" title="Tools Icon">Dev Center</a></li>
 <li class="ico ico-helpcenter menu-item menu-item-type-custom menu-item-object-custom menu-item-242"><a target="_blank" rel="noopener" href="https://help.rydoo.com/"><img loading="lazy" width="44" height="44" class="menu-icon" src="./uploads/2020/09/menu-helpcenter.svg" alt="Help Center Compass Icon" title="Compass Icon">Help Center</a></li>
 </ul>
-</li>
-<li class="preventdefault-on-mobile menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-2775"><a href="https://www.rydoo.com/company/about-us/">Company</a>
+</li> -->
+
+<!-- <li class="preventdefault-on-mobile menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-2775"><a href="https://www.rydoo.com/company/about-us/">Company</a>
 <ul class="sub-menu">
 <li class="ico ico-about menu-item menu-item-type-post_type menu-item-object-page menu-item-450"><a href="https://www.rydoo.com/company/about-us/"><img loading="lazy" width="44" height="44" class="menu-icon" src="https://www.rydoo.com/app/uploads/2020/09/menu-about.svg" alt="Rydoo logo in purple" title="Rydoo logo in purple">About Us</a></li>
 <li class="ico ico-careers menu-item menu-item-type-post_type menu-item-object-page menu-item-10584"><a href="https://www.rydoo.com/company/careers/"><img loading="lazy" width="44" height="44" class="menu-icon" src="https://www.rydoo.com/app/uploads/2020/09/menu-careers.svg" alt="Menu Careers and Case Studies Bag Icon" title="Bag Icon">Careers</a></li>
@@ -141,20 +149,26 @@
 <li class="ico ico-contact menu-item menu-item-type-post_type menu-item-object-page menu-item-11351"><a href="https://www.rydoo.com/company/contact-us/"><img loading="lazy" width="44" height="44" class="menu-icon" src="https://www.rydoo.com/app/uploads/2020/09/menu-contact.svg" alt="Menu Phone Contact Icon" title="Phone icon">Contact us</a></li>
 <li class="ico ico-press menu-item menu-item-type-post_type menu-item-object-page menu-item-447"><a href="https://www.rydoo.com/company/press/"><img loading="lazy" width="44" height="44" class="menu-icon" src="https://www.rydoo.com/app/uploads/2020/09/menu-press.svg" alt="Press and Whitepapers Journal Icon" title="Journal Icon">Rydoo in the press</a></li>
 </ul>
-</li>
+</li> -->
+
 </ul>
 </nav>
-<nav class="nav-secondary">
+
+<!-- <nav class="nav-secondary">
 <ul id="menu-secondary-menu" class="nav-secondary"><li class="btn secondary-dark small menu-item menu-item-type-custom menu-item-object-custom menu-item-55"><a href="https://app.rydoo.com/">Log in</a></li>
 <li class="btn hidden small menu-item menu-item-type-custom menu-item-object-custom menu-item-56"><a href="https://expense.rydoo.com/signup/en">Start free trial</a></li>
 </ul>
-</nav>
-<ul class="language-select">
+</nav> -->
+
+<!-- <ul class="language-select">
 <li>en</li>
 <div class="language-dropdown">
 <a href="https://www.rydoo.com/de/">Deutsch</a><a href="https://www.rydoo.com/">English</a><a href="https://www.rydoo.com/es/">Español</a><a href="https://www.rydoo.com/fr/">Français</a><a href="https://www.rydoo.com/nl/">Nederlands</a><a href="https://www.rydoo.com/pt/">Português</a> </div>
-</ul> </div>
-</header>  -->
+</ul>  -->
+
+</div>
+
+</header> 
 
 
 <div class="wrap container-fluid" role="document"> 
