--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 <div class="subtitle"><p>Gopy is the first blockchain based stakeholders engagement ecosystem that allows companies to easily engage, survey and train employees, and report progresses to stakeholders anywhere and anytime</p>
 </div>
 <div class="button-group">
-<a class="btn primary" href="./#form-section" target="" id="">
+<a class="btn primary" href="./index.html/#form-section" target="" id="">
 <div class="cta-text">Start now</div> </a>
 <div class="wistia_embed wistia_async_ms7qk1fyce popover=true popoverContent=html">
 <a class="link link-wistia" href="//fast.wistia.net/embed/iframe/ms7qk1fyce?autoPlay=true" target="_blank" id="ms7qk1fyce">
