--- a/index.html
+++ b/index.html
@@ -255,19 +255,19 @@
  <ul class="list-unstyled">
 <li>
 <a class="btn-feature-selector feature-selector  active" data-target="0">
-<span class="icon"><img loading="lazy" src="https://www.rydoo.com/app/uploads/2020/04/expenses-notes-manage-icon.svg" width="" height="" alt="Notes and Expenses Icon" title=""></span>
+<span class="icon"><img loading="lazy" src="https://www.rydoo.com/app/uploads/2020/04/dashboard-icon.svg" width="" height="" alt="Dashboard Icon" title=""></span>
 Dynamic dashboard
 </a>
 </li>
 <li>
 <a class="btn-feature-selector feature-selector" data-target="1">
-<span class="icon"><img loading="lazy" src="./app/uploads/2020/04/analytics-icon.svg" width="" height="" alt="Analytics Icon" title=""></span>
+<span class="icon"><img loading="lazy" src="https://www.rydoo.com/app/uploads/2020/04/expenses-notes-manage-icon.svg" width="" height="" alt="Survey Icon" title=""></span>
 Easy survey designs
 </a>
 </li>
 <li>
 <a class="btn-feature-selector feature-selector" data-target="2">
-<span class="icon"><img loading="lazy" src="./app/uploads/2020/04/dashboard-icon.svg" width="" height="" alt="Dashboard Icon" title=""></span>
+<span class="icon"><img loading="lazy" src="./app/uploads/2020/04/analytics-icon.svg" width="" height="" alt="Visualization Icon" title=""></span>
 Effective report visualizations
 </a>
 </li>
