--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 <a class="btn primary" href="./#form-section" target="" id="">
 <div class="cta-text">Talk to us</div> </a>
 <div class="wistia_embed wistia_async_ms7qk1fyce popover=true popoverContent=html">
-<a class="link link-wistia" href="//www.youtube.com/watch?v=EId9Mv6HUyE" target="_blank" id="ms7qk1fyce">
+<a class="link link-wistia" href="//youtube.com/watch?v=EId9Mv6HUyE" target="_blank" id="ms7qk1fyce">
 <img loading="lazy" class="cta-icon" src="./app/uploads/2020/05/btn-play.png" width="24" height="24" alt="Play Button" title="Play video"> <div class="cta-text">Watch demo</div> </a>
 </div>
 </div>
