--- a/index.html
+++ b/index.html
@@ -376,9 +376,6 @@ Stay connected
  </h4>
 <div class="collapse-content">
 Get enterntained with our already-builted newsfeed. Chat and share professional experiences or simply make friends with other colleagues on Gopy app.
-<div class="btn-container">
-<a href="https://www.rydoo.com/resources/case-study/how-this-cfo-decided-to-reinvent-his-companys-expense-management-process/" class="btn-arrow"><span class="cta-text">How Total Tool cut its Reimbursement time by 4</span></a>
-</div>
 </div>
 </li>
 <li data-section=0 class="collapse-item">
@@ -453,9 +450,6 @@ Keep employees engaged
 </h4>
 <div class="collapse-content">
 Lack of workplace dialouges is the number one factor that damages the industrial relationship. That's why Gopy provides an employee survey tool to help company gather employees' feedbacks and adjust accordingly in order to help reduce turn-over rate, increase productivity, and most importantly show employees you care. 
-<div class="btn-container">
-<a href="https://www.rydoo.com/resources/case-study/what-if-reinventing-a-whole-business-process-and/" class="btn-arrow"><span class="cta-text">How MRN saved its controllers 3 days a month</span></a>
-</div>
 </div>
 </li>
 <li data-section=1 class="collapse-item">
@@ -468,9 +462,6 @@ Increase credibility with stakeholders
 </h4>
 <div class="collapse-content">
 Show stakeholders your company's practices and employees' ratings through company's self-assessment and employee's survey reports. When evaluating among various companies, stakeholders can take these reports into account and spot company with good practices.
-<div class="btn-container">
-<a href="https://get.rydoo.com/customizable-travel-and-expense-policy-template" class="btn-arrow"><span class="cta-text">Get your T&amp;E policy template</span></a>
-</div>
 </div>
 </li>
 <li data-section=1 class="collapse-item">
@@ -483,9 +474,6 @@ Make informative decisions
 </h4>
 <div class="collapse-content">
 With Gopy's dashboard, company managers can easily tracks, analyzes, displays customizable metrics and key data points that tailor to their needs. Get all the necessary insights to adjust human capital resource management, improve company policies, and manage better labor relations.
-<div class="btn-container">
-<a href="https://www.rydoo.com/expense/automated-expense-approvals/" class="btn-arrow"><span class="cta-text">Learn more about automating expense approvals</span></a>
-</div>
 </div>
 </li>
 <li data-section=1 class="collapse-item">
@@ -498,9 +486,6 @@ Provide training at a low cost
 </h4>
 <div class="collapse-content">
 Offline training for mass workforce is time-consuming, costly, can interupt production, and often don't get a good return on investment. However, with Gopy's accessible e-learning courses, training is much more cost saving and convinient."
-<div class="btn-container">
-<a href="https://www.rydoo.com/expense/automated-expense-approvals/" class="btn-arrow"><span class="cta-text">Learn more about automating expense approvals</span></a>
-</div>
 </div>
 </li>
 </ul>
@@ -608,16 +593,13 @@ For consultants & researchers</h3>
 <li data-section=1 class="collapse-item  active">
 <h4 class="btn-collapse">
 <span class="icon"><img loading="lazy" src="./app/uploads/2020/04/sticky-note-icon.svg" width="" height="" alt="" title=""></span>
-Survey employees
+Survey wokers
 <svg width="10" height="7" viewbox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M5.00016 6.33301L0.333496 1.83274L1.88978 0.333008L5.00016 3.33354L8.11054 0.333008L9.66683 1.83274L5.00016 6.33301Z" fill="#030322" />
 </svg>
 </h4>
 <div class="collapse-content">
 Traditional on-site interview is timely, costly, not well structured, not quantitative and often does not have a diverse sample pool. With online employees' survey, independent assessors can effortlessly collect quantitative and qualitative data by surveying and getting feedbacks from a large pool of employees.
-<div class="btn-container">
-<a href="https://www.rydoo.com/resources/case-study/what-if-reinventing-a-whole-business-process-and/" class="btn-arrow"><span class="cta-text">How MRN saved its controllers 3 days a month</span></a>
-</div>
 </div>
 </li>
 <li data-section=1 class="collapse-item">
@@ -630,9 +612,6 @@ Assess and evaluate companies
 </h4>
 <div class="collapse-content">
 Consultants & researchers can create assesment templates, assign company to do an assessment, and request related documents. With Gopy dynamic and customized dashboard, assessors can quickly spot any on-going issues at a glance, inform the company, make recommendations and evaluations.
-<div class="btn-container">
-<a href="https://get.rydoo.com/customizable-travel-and-expense-policy-template" class="btn-arrow"><span class="cta-text">Get your T&amp;E policy template</span></a>
-</div>
 </div>
 </li>
 <li data-section=1 class="collapse-item">
@@ -646,9 +625,6 @@ Train companies and employees
 <div class="collapse-content">
 On-site training is expensive, time consuming, and hard to measure the impacts. 
 However, with Gopy e-learning, assessors (trainers) can train companies effortlessly anywhere at anytime, and can also measure the course impacts by viewing employee learning progress reports, and course feedbacks.
-<div class="btn-container">
-<a href="https://www.rydoo.com/expense/automated-expense-approvals/" class="btn-arrow"><span class="cta-text">Learn more about automating expense approvals</span></a>
-</div>
 </div>
 </li>
 </ul>
