--- a/index.html
+++ b/index.html
@@ -416,6 +416,7 @@ Finding times to learn and upgrade skills in order to stay ahead in the competit
 <img loading="lazy" src="./app/uploads/2020/04/get-reimbursed-faster.png" width="344" height="490" srcset="./app/uploads/2020/04/get-reimbursed-faster.png 344w, ./app/uploads/2020/04/get-reimbursed-faster.png 2x" sizes="768px" alt="Trip Brussels - New York | Flight, Hotel, Rail, Uber and Amazon" title="">
 <img loading="lazy" src="./app/uploads/2020/04/throw-your-expense.png" width="458" height="267" srcset="./app/uploads/2020/04/throw-your-expense.png 458w, ./app/uploads/2020/04/throw-your-expense.png 2x" sizes="768px" alt="Choose between Hotels, Flights, Trains and Cars" title="">
 -->
+<img loading="lazy" src="./gopymedia/appfeed.png" width="400" height="267" srcset="./gopymedia/appfeed.png 400w, ./gopymedia/appfeed 2x" sizes="400px" alt="Gopy app newsfeed" title="">
 </div>
 <img class="dots" loading="lazy" src="./app/themes/rydoo/dist/images/8f4d5sd4.svg" width="180" height="152" alt="Small dots on the corner of the image">
 </div>
