--- a/index.html
+++ b/index.html
@@ -201,17 +201,17 @@
 <a class="btn primary" href="./#form-section" target="" id="">
 <div class="cta-text">Talk to us</div> </a>
 <div class="wistia_embed wistia_async_ms7qk1fyce popover=true popoverContent=html">
-<<<<<<< HEAD
+<!--Link video demo-->
 <a class="link link-wistia" href="https://www.youtube.com/watch?v=EId9Mv6HUyE" target="_blank" id="ms7qk1fyce">
-<img loading="lazy" class="cta-icon" src="./app/uploads/2020/05/btn-play.png" width="24" height="24" alt="Play Button" title="Play video"> <div class="cta-text">See how it works</div> </a>
-=======
-<a class="link link-wistia" href="//youtube.com/watch?v=EId9Mv6HUyE" target="_blank" id="ms7qk1fyce">
 <img loading="lazy" class="cta-icon" src="./app/uploads/2020/05/btn-play.png" width="24" height="24" alt="Play Button" title="Play video"> <div class="cta-text">Watch demo</div> </a>
->>>>>>> 29eceddb230d60c744892a06e58509aae6ae0dfd
+<!-- The end link demo-->
 </div>
 </div>
 </div>
 <div class="col-md-6">
+<img loading="lazy" class="header_image contained desktop" src="./app/uploads/2020/11/Main.png" width="768" height="678" sizes="(min-width: 1200px) 570px, (min-width: 768px) 450px, 150px" alt="Header Mobile App" title="Rydoo in action!">
+<img loading="lazy" class="header_image contained mobile" src="./app/uploads/2020/11/Main.png" width="768" height="678"  sizes="(min-width: 768px) 150px, 50vw" alt="Header Mobile App" title="Rydoo in action!">
+
 <!--
 <img loading="lazy" class="header_image contained desktop" src="./app/uploads/2020/11/header-app-02-768x678.jpg" width="768" height="678" srcset="./app/uploads/2020/11/header-app-02-768x678.jpg 768w, ./app/uploads/2020/11/header-app-02-650x574.jpg 650w, ./app/uploads/2020/11/header-app-02-1370x1210.jpg 1370w, ./app/uploads/2020/11/header-app-02-960x848.jpg 960w, ./app/uploads/2020/11/header-app-02.jpg 1526w, ./app/uploads/2020/11/header-app-02.jpg 2x" sizes="(min-width: 1200px) 570px, (min-width: 768px) 450px, 150px" alt="Header Mobile App" title="Rydoo in action!">
 <img loading="lazy" class="header_image contained mobile" src="./app/uploads/2020/11/header-app-02-768x678.jpg" width="768" height="678" srcset="./app/uploads/2020/11/header-app-02-768x678.jpg 768w, ./app/uploads/2020/11/header-app-02-650x574.jpg 650w, ./app/uploads/2020/11/header-app-02-1370x1210.jpg 1370w, ./app/uploads/2020/11/header-app-02-960x848.jpg 960w, ./app/uploads/2020/11/header-app-02.jpg 1526w, ./app/uploads/2020/11/header-app-02.jpg 2x" sizes="(min-width: 768px) 150px, 50vw" alt="Header Mobile App" title="Rydoo in action!">
@@ -416,13 +416,17 @@ Finding times to learn and upgrade skills in order to stay ahead in the competit
 <div class="tac-images-container  col-lg-5 col-xl-5 offset-sm-1">
 <div class="tac-images">
 <div class="content-images content-image-0">
+<img loading="lazy" src="./app/uploads/gopymedia/appfeed.png" width="768" height="1187"  sizes="768px" alt="Rydoo app phone scan receipt" title="">
+<img loading="lazy" src="./app/uploads/gopymedia/appsurvey.png" width="768" height="1187"  sizes="768px" alt="Rydoo app phone scan receipt" title="">
+<img loading="lazy" src="./app/uploads/gopymedia/appchat.png" width="768" height="1187"  sizes="768px" alt="Rydoo app phone scan receipt" title="">
+
 <!--
 <img loading="lazy" src="./app/uploads/2020/11/phone-2-2-768x1187.png" width="768" height="1187" srcset="./app/uploads/2020/11/phone-2-2-768x1187.png 768w, ./app/uploads/2020/11/phone-2-2.png 2x" sizes="768px" alt="Rydoo app phone scan receipt" title="">
 <img loading="lazy" src="./app/uploads/2020/04/one-booking-platform-for-all-your-transport.png" width="443" height="332" srcset="./app/uploads/2020/04/one-booking-platform-for-all-your-transport.png 443w, ./app/uploads/2020/04/one-booking-platform-for-all-your-transport.png 2x" sizes="768px" alt="Prices to submit, wait approval, wait to be controlled, wait to be reported" title="">
 <img loading="lazy" src="./app/uploads/2020/04/get-reimbursed-faster.png" width="344" height="490" srcset="./app/uploads/2020/04/get-reimbursed-faster.png 344w, ./app/uploads/2020/04/get-reimbursed-faster.png 2x" sizes="768px" alt="Trip Brussels - New York | Flight, Hotel, Rail, Uber and Amazon" title="">
 <img loading="lazy" src="./app/uploads/2020/04/throw-your-expense.png" width="458" height="267" srcset="./app/uploads/2020/04/throw-your-expense.png 458w, ./app/uploads/2020/04/throw-your-expense.png 2x" sizes="768px" alt="Choose between Hotels, Flights, Trains and Cars" title="">
 -->
-<img loading="lazy" src="./downloads/gopymedia/appfeed.png" width="400" height="267" srcset="./gopymedia/appfeed.png 400w, ./gopymedia/appfeed 2x" sizes="4000px" alt="Gopy app newsfeed" title="">
+<img loading="lazy" src="./app/uploads/gopymedia/appfeed.png" width="400" height="267" sizes="4000px" alt="Gopy app newsfeed" title="">
 </div>
 <img class="dots" loading="lazy" src="./app/themes/rydoo/dist/images/8f4d5sd4.svg" width="180" height="152" alt="Small dots on the corner of the image">
 </div>
@@ -443,6 +447,10 @@ For companies</h3>
 <div class="tac-images-container  col-lg-7 col-xl-5">
 <div class="tac-images text-right">
 <div class="content-images content-image-1">
+<img loading="lazy" src="./app/uploads/gopymedia/corpsurvey.png" width="637" height="552"  sizes="768px" alt="" title="">
+<img loading="lazy" src="./app/uploads/gopymedia/corpsurvey.png" width="637" height="552"  sizes="768px" alt="" title="">
+<img loading="lazy" src="./app/uploads/gopymedia/corpsurvey.png" width="637" height="552"  sizes="768px" alt="" title="">
+<img loading="lazy" src="./app/uploads/gopymedia/corpsurvey.png" width="637" height="552"  sizes="768px" alt="" title="">
 <!--
 <img loading="lazy" src="./app/uploads/2021/03/Approve-trips-expenses-2.png" width="483" height="352" srcset="./app/uploads/2021/03/Approve-trips-expenses-2.png 483w, ./app/uploads/2021/03/Approve-trips-expenses-2.png 2x" sizes="768px" alt="Approve trips expenses" title="">
 <img loading="lazy" src="./app/uploads/2020/04/increase-compliance-company-policy-e1599223624703.png" width="490" height="294" srcset="./app/uploads/2020/04/increase-compliance-company-policy-e1599223624703.png 490w, ./app/uploads/2020/04/increase-compliance-company-policy-e1599223624703.png 2x" sizes="768px" alt="Warnings - Expense should have receipt. Dinner can not be more than €45 per person in France. Expense can not be older than one month." title="">
@@ -572,6 +580,10 @@ Spreadsheets are outdated, tedious and does not have smart tools like case progr
 <div class="tac-images-container  col-lg-5 col-xl-5 offset-sm-1">
 <div class="tac-images">
 <div class="content-images content-image-2">
+<img loading="lazy" src="./app/uploads/gopymedia/unionsurvey.png" width="608" height="275" sizes="768px" title="">
+<img loading="lazy" src="./app/uploads/gopymedia/unionsurvey.png" width="608" height="275" sizes="768px" title="">
+<img loading="lazy" src="./app/uploads/gopymedia/unionsurvey.png" width="608" height="275" sizes="768px" title="">
+<img loading="lazy" src="./app/uploads/gopymedia/unionsurvey.png" width="608" height="275" sizes="768px" title="">
 <!--
 <img loading="lazy" src="./app/uploads/2020/03/get-the-full-picture.png" width="520" height="284" srcset="./app/uploads/2020/03/get-the-full-picture.png 520w, ./app/uploads/2020/03/get-the-full-picture.png 2x" sizes="768px" alt="" title="">
 <img loading="lazy" src="./app/uploads/2020/09/spot-anomalies.png" width="598" height="213" srcset="./app/uploads/2020/09/spot-anomalies.png 598w, ./app/uploads/2020/09/spot-anomalies.png 2x" sizes="768px" alt="Graph to spot anomalies" title="Graph to spot anomalies">
@@ -597,6 +609,10 @@ For consultants & researchers</h3>
 <div class="tac-images-container  col-lg-7 col-xl-5">
 <div class="tac-images text-right">
 <div class="content-images content-image-1">
+<img loading="lazy" src="./app/uploads/gopymedia/researchersurvey.png" width="637" height="552"  sizes="768px" alt="" title="">
+<img loading="lazy" src="./app/uploads/gopymedia/researchersurvey.png" width="637" height="552"  sizes="768px" alt="" title="">
+<img loading="lazy" src="./app/uploads/gopymedia/researchersurvey.png" width="637" height="552"  sizes="768px" alt="" title="">
+
 <!--
 <img loading="lazy" src="./app/uploads/2021/03/Approve-trips-expenses-2.png" width="483" height="352" srcset="./app/uploads/2021/03/Approve-trips-expenses-2.png 483w, ./app/uploads/2021/03/Approve-trips-expenses-2.png 2x" sizes="768px" alt="Approve trips expenses" title="">
 <img loading="lazy" src="./app/uploads/2020/04/increase-compliance-company-policy-e1599223624703.png" width="490" height="294" srcset="./app/uploads/2020/04/increase-compliance-company-policy-e1599223624703.png 490w, ./app/uploads/2020/04/increase-compliance-company-policy-e1599223624703.png 2x" sizes="768px" alt="Warnings - Expense should have receipt. Dinner can not be more than €45 per person in France. Expense can not be older than one month." title="">
