add folder asset

--- a/index.html
+++ b/index.html
@@ -1180,17 +1180,17 @@ However, with Gopy e-learning, assessors (trainers) can train companies effortle
 <div class="btn small secondary-light no-border" data-toggle="modal" data-target="#cookie-consent-modal">Manage preferences</div>
 </div> -->
 
-<script src="https://code.jquery.com/jquery-3.5.0.min.js" id="jquery-js"></script>
+<script src="./app/themes/rydoo/resources/assets/scripts/static/jquery-3.5.0.min.js" id="jquery-js"></script>
 <script>(window.jQuery && jQuery.noConflict()) || document.write('<script src="/app/themes/rydoo/resources/assets/scripts/static/jquery-3.5.0.min.js"><\/script>')</script>
 <script src="./app/themes/rydoo/dist/scripts/main.js?ver=1.0.891" id="sage/main.js-js"></script>
 <script src="./app/themes/rydoo/resources/assets/scripts/static/plugins.js" id="sage/plugins.js-js"></script>
 <script src="./app/themes/rydoo/resources/assets/scripts/static/roi-calculator.js" id="sage/roi-calculator.js-js"></script>
 <script src="./app/themes/rydoo/resources/assets/scripts/static/forms.js" id="sage/forms.js-js"></script>
-<script src="./app/themes/rydoo/resources/assets/scripts/lib/jquery.event.move.js" id="sage/jquery.event.move.js-js"></script>
-<script src="./app/themes/rydoo/resources/assets/scripts/lib/jquery.twentytwenty.js" id="sage/jquery.twentytwenty.js-js"></script>
-<script src="https://js.hsforms.net/forms/v2.js" id="hubspot/v2.js-js"></script>
-<script src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-604f46ad007900a6" id="add-this-js"></script>
+<script src="./app/themes/rydoo/resources/assets/scripts/static/jquery.event.move.js" id="sage/jquery.event.move.js-js"></script>
+<script src="./app/themes/rydoo/resources/assets/scripts/static/jquery.twentytwenty.js" id="sage/jquery.twentytwenty.js-js"></script>
+<script src="./app/themes/rydoo/resources/assets/scripts/static/v2.js" id="hubspot/v2.js-js"></script>
+<script src="./app/themes/rydoo/resources/assets/scripts/static/addthis_widget.js#pubid=ra-604f46ad007900a6" id="add-this-js"></script>
 <script>window._nQc = "89398409";</script>
-<script async src="https://serve.albacross.com/track.js"></script>
+<script async src="./app/themes/rydoo/resources/assets/scripts/static/track.js"></script>
 </body>
 </html>
