--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 </ul>
 </li> -->
 
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24901"><a href="index.html">Home</a></li>
+
 
 <!-- <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-24384"><a href="#">Why Rydoo?</a>
 <ul class="sub-menu">
@@ -138,10 +138,10 @@
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8912"><a href="https://www.rydoo.com/expense/convert-to-a-paperless-office/">Convert to a Paperless Office</a></li>
 </ul>
 </li> -->
-
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24901"><a href="index.html">Home</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="blog.html">Blog</a></li>
-        
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="https://csrvietnam.org/admin/#/login">Login</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="tutorial.html">Tutorial</a></li>        
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="https://portal.gopy.io/login">Login</a></li>
 
 <!-- <li class="preventdefault-on-mobile menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-21"><a href="https://www.rydoo.com/resources/">Resources</a>
 <ul class="sub-menu">
