--- a/tutorial-child.html
+++ b/tutorial-child.html
@@ -73,6 +73,7 @@ a.cta_button{-moz-box-sizing:content-box !important;-webkit-box-sizing:content-b
   }
 </style>
 
+
 </head>
 <body class="   hs-content-id-46061325364 hs-landing-page hs-page " style="">
     <div class="header-container-wrapper">
@@ -555,7 +556,11 @@ a.cta_button{-moz-box-sizing:content-box !important;-webkit-box-sizing:content-b
 <div class="row-fluid ">
 <div class="span12 widget-span widget-type-custom_widget content-above-block" style="" data-widget-type="custom_widget" data-x="0" data-w="12">
 <div id="hs_cos_wrapper_module_15853261092311458" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_module widget-type-rich_text widget-type-rich_text" style="" data-hs-cos-general-type="widget" data-hs-cos-type="module"><span id="hs_cos_wrapper_module_15853261092311458_" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_rich_text" style="" data-hs-cos-general-type="widget" data-hs-cos-type="rich_text"><p>Get the full research report now</p>
-<p><a class="cta_button_custom scroll-down" href="#form-section">Download</a></p></span></div>
+<p><a class="cta_button_custom scroll-down" href="./File/DN_Register.pdf"  >Download</a></p>
+</span></div>
+
+
+<!--<p><a class="cta_button_custom scroll-down" href="#form-section">Download</a></p></span></div>-->
 
 </div><!--end widget-span -->
 </div><!--end row-->
@@ -643,13 +648,13 @@ a.cta_button{-moz-box-sizing:content-box !important;-webkit-box-sizing:content-b
 if (typeof hsVars !== 'undefined') { hsVars['language'] = 'en'; }
 </script>
 
-<script src="/hs/hsstatic/cos-i18n/static-1.37/bundles/project.js"></script>
+<script src="https://get.rydoo.com/hs/hsstatic/cos-i18n/static-1.37/bundles/project.js"></script>
 
     <!--[if lte IE 8]>
     <script charset="utf-8" src="https://js.hsforms.net/forms/v2-legacy.js"></script>
     <![endif]-->
 
-<script src="/_hcms/forms/v2.js"></script>
+<script src="https://get.rydoo.com/_hcms/forms/v2.js"></script>
 
     <script>
         var options = {
@@ -741,7 +746,7 @@ _hsq.push(["setContentMetadata", {
 }]);
 </script>
 
-<script type="text/javascript" id="hs-script-loader" async defer src="/hs/scriptloader/2511970.js"></script>
+<script type="text/javascript" id="hs-script-loader" async defer src="https://get.rydoo.com/hs/scriptloader/2511970.js"></script>
 <!-- End of HubSpot Analytics Code -->
 
 
@@ -764,7 +769,7 @@ var hsVars = {
 </script>
 
 
-<script defer src="/hs/hsstatic/HubspotToolsMenu/static-1.103/js/index.js"></script>
+<script defer src="https://get.rydoo.com/hs/hsstatic/HubspotToolsMenu/static-1.103/js/index.js"></script>
 
 
 
