--- a/tutorial.html
+++ b/tutorial.html
@@ -130,11 +130,12 @@
 <div class=" image-container">
 <div class="img-cover" style="background-image: url(https://www.rydoo.com/app/uploads/2021/05/Rydoo_WPmockup_Compliance2021EN-600x400.png)"></div>
 </div>
+	
 <div class="content">
-<div class="tag">Whitepaper</div> <h4 class="with-min-height"> The Importance of Expense Compliance</h4>
+<div class="tag">Whitepaper</div> <h4 class="with-min-height"> Vietnamese: Hướng dẫn đăng ký tài khoản doanh nghiệp trên Gopy Portal</h4>
 <div class="article-info">
  Other </div>
-<p>Your no.1 guide to internal and external compliance. Get a comprehensive view of how a digital expense solution alleviates a lot of the (non-)compliancy issues.</p>
+<p>Vietnamese: Xem cách đăng ký tài khoản doanh nghiệp trên Gopy Portal tại đây.</p>
 </div>
 </a>
 </div> 
@@ -143,11 +144,12 @@
 <div class=" image-container">
 <div class="img-cover" style="background-image: url(https://www.rydoo.com/app/uploads/2021/02/3-WAYS-600x400.jpg)"></div>
 </div>
+	
 <div class="content">
-<div class="tag">Whitepaper</div> <h4 class="with-min-height"> Research Report: The state of Expense Management 2021</h4>
+<div class="tag">Whitepaper</div> <h4 class="with-min-height">Vietnamese: Hướng dẫn kết bạn trên Gopy app</h4>
 <div class="article-info">
 Other </div>
-<p>Get a comprehensive view of expense management and benchmark yourself against other comparable companies.</p>
+<p>Vietnamese:Xem hướng dẫn đăng ký kết bạn trên Gopy App tại đây.</p>
 </div>
 </a>
 </div> 
@@ -157,25 +159,12 @@ Other </div>
 <div class=" image-container">
 <div class="img-cover" style="background-image: url(https://www.rydoo.com/app/uploads/2020/10/1-600x400.png)"></div>
 </div>
+	
 <div class="content">
-<div class="tag">Whitepaper</div> <h4 class="with-min-height"> Working in Harmony: Creating a Technology Stack For Your Finance Team</h4>
-<div class="article-info">
-Other </div>
-<p>The #1 guide to create a technology stack fit for your finance team.</p>
-</div>
-</a>
-</div> 
-<div class="col-md-4 blog-tile
-            whitepapers">
-<a href="tutorial-child.html">
-<div class=" image-container">
-<div class="img-cover" style="background-image: url(https://www.rydoo.com/app/uploads/2020/06/WP-How-your-Finance-Team-can-Lead-the-Way-out-of-Lockdown-600x400.png)"></div>
-</div>
-<div class="content">
-<div class="tag">Whitepaper</div> <h4 class="with-min-height"> How your Finance Team can lead the way out of Lockdown</h4>
+<div class="tag">Whitepaper</div> <h4 class="with-min-height"> Vietnamese: Hướng dẫn làm khảo sát trên Gopy APP</h4>
 <div class="article-info">
 Business travel </div>
-<p>What have CFOs identified as the corporate priorities for the next 12 months? How can Finance ensure the business&#8217; continuity and drive the change?</p>
+<p>Vietnamese: Xem hướng dẫn làm khảo sát trên Gopy App tại đây.</p>
 </div>
 </a>
 </div> 
@@ -185,12 +174,7 @@ Business travel </div>
 <div class=" image-container">
 <div class="img-cover" style="background-image: url(https://www.rydoo.com/app/uploads/2020/06/WP-Getting-Back-on-Board-600x400.png)"></div>
 </div>
-<div class="content">
-<div class="tag">Whitepaper</div> <h4 class="with-min-height"> Business Travel after Covid-19</h4>
-<div class="article-info">
-Business travel </div>
-<p>In this e-paper, we look at the potential impact of the coronavirus on the way we travel for work. How will attitudes to business travel change – among both employers and employees –and what new rules will we find imposed on us? How will we travel
-differently in this new world, and will we even </p>
+
 </div>
 </a>
 </div>  
@@ -199,6 +183,7 @@ differently in this new world, and will we even </p>
 </main>
 </div>
 </div>
+
 <footer class="content-info">
 <div class="container">
 <div class="row">
