--- a/tutorial.html
+++ b/tutorial.html
@@ -131,7 +131,7 @@
 </div>
 	
 <div class="content">
-<div class="tag">Whitepaper</div> <h4 class="with-min-height"> Vietnamese: Hướng dẫn đăng ký tài khoản doanh nghiệp trên Gopy Portal</h4>
+<div class="tag">Tutorial</div> <h4 class="with-min-height"> Vietnamese: Hướng dẫn đăng ký tài khoản doanh nghiệp trên Gopy Portal</h4>
 <div class="article-info">
  Other </div>
 <p>Vietnamese: Xem cách đăng ký tài khoản doanh nghiệp trên Gopy Portal tại đây.</p>
@@ -145,7 +145,7 @@
 </div>
 	
 <div class="content">
-<div class="tag">Whitepaper</div> <h4 class="with-min-height">Vietnamese: Hướng dẫn kết bạn trên Gopy app</h4>
+<div class="tag">Tutorial</div> <h4 class="with-min-height">Vietnamese: Hướng dẫn kết bạn trên Gopy app</h4>
 <div class="article-info">
 Other </div>
 <p>Vietnamese:Xem hướng dẫn đăng ký kết bạn trên Gopy App tại đây.</p>
@@ -160,19 +160,13 @@ Other </div>
 </div>
 	
 <div class="content">
-<div class="tag">Whitepaper</div> <h4 class="with-min-height"> Vietnamese: Hướng dẫn làm khảo sát trên Gopy APP</h4>
+<div class="tag">Tutorial</div> <h4 class="with-min-height"> Vietnamese: Hướng dẫn làm khảo sát trên Gopy APP</h4>
 <div class="article-info">
 Business travel </div>
 <p>Vietnamese: Xem hướng dẫn làm khảo sát trên Gopy App tại đây.</p>
 </div>
 </a>
 </div> 
-<div class="col-md-4 blog-tile
-            whitepapers">
-<a href="tutorial-child.html">
-<div class=" image-container">
-<div class="img-cover" style="background-image: url(https://www.rydoo.com/app/uploads/2020/06/WP-Getting-Back-on-Board-600x400.png)"></div>
-</div>
 
 </div>
 </a>
@@ -189,6 +183,7 @@ Business travel </div>
  <div class="col-12 col-sm-6 col-md-3 rydoo-logo">
 <img src="https://www.gopy.io/app/themes/rydoo/dist/images/fav/android-chrome-192x192.png" alt="Gopy Logo" title="Gopy">
 <br><br>
+<!--
 <div>&nbsp;Changing the way we work</div>
 <div class="social">
 <a class="facebook" target="_blank" href="https://www.facebook.com/Rydooapp"></a>
@@ -206,7 +201,7 @@ Business travel </div>
 </div>
 <div class="col-12 col-md-6">
 <nav class="nav-footer">
-<!--
+
 <ul id="menu-footer-menu" class="nav-footer">
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1514"><a href="https://get.rydoo.com/en/demo">Request a demo</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-29899"><a href="https://www.rydoo.com/expense/">Product Overview</a></li>
@@ -227,10 +222,10 @@ Business travel </div>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30223"><a href="https://www.rydoo.com/cookies-policy/">Cookies Policy</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8582"><a href="https://www.rydoo.com/terms-and-conditions/">Terms &#038; Conditions</a></li>
 </ul>
--->
 </nav>
 </div>
 </div>
+
 <div class="bottom row">
 <div class="col-12 col-md-8">
 <div>
@@ -247,6 +242,8 @@ Business travel </div>
 <div class="location">Lisbon</div>
 </div>
 </div>
+-->
+	 
 <div class="col-12 col-md-4">
 <div class="copyright">&copy; 2021 Gopy</div>
 </div>
