--- a/tutorial.html
+++ b/tutorial.html
@@ -134,7 +134,7 @@
 </div>
 	
 <div class="content">
-<div class="tag">Tutorial</div> <h4 class="with-min-height"> Vietnamese: Hướng dẫn đăng ký tài khoản doanh nghiệp trên Gopy Portal</h4>
+<div class="tag">tutorial</div> <h4 class="with-min-height"> Vietnamese: Hướng dẫn đăng ký tài khoản doanh nghiệp trên Gopy Portal</h4>
 <div class="article-info">
  Other </div>
 <p>Vietnamese: Xem cách đăng ký tài khoản doanh nghiệp trên Gopy Portal tại đây.</p>
@@ -148,22 +148,22 @@
 </div>
 	
 <div class="content">
-<div class="tag">Tutorial</div> <h4 class="with-min-height">Vietnamese: Hướng dẫn kết bạn trên Gopy app</h4>
+<div class="tag">tutorial</div> <h4 class="with-min-height">Vietnamese: Hướng dẫn kết bạn trên Gopy app</h4>
 <div class="article-info">
 Other </div>
 <p>Vietnamese:Xem hướng dẫn đăng ký kết bạn trên Gopy App tại đây.</p>
 </div>
 </a>
 </div> 
+	
 <div class="col-md-4 blog-tile
             whitepapers">
 <a href="tutorial-child.html">
 <div class=" image-container">
 <div class="img-cover" style="background-image: url(https://www.rydoo.com/app/uploads/2020/10/1-600x400.png)"></div>
-</div>
-	
+</div>	
 <div class="content">
-<div class="tag">Tutorial</div> <h4 class="with-min-height"> Vietnamese: Hướng dẫn làm khảo sát trên Gopy APP</h4>
+<div class="tag">tutorial</div> <h4 class="with-min-height"> Vietnamese: Hướng dẫn làm khảo sát trên Gopy APP</h4>
 <div class="article-info">
 Business travel </div>
 <p>Vietnamese: Xem hướng dẫn làm khảo sát trên Gopy App tại đây.</p>
